--- a/src/App.scss
+++ b/src/App.scss
@@ -126,6 +126,9 @@ body {
 }
 .App {
   padding: 50px 75px;
+  @media (max-width: 500px) {
+    padding: 50px 7px;
+  }
 }
 .highlight {
   background: yellow;
