--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,8 +1,8 @@
 .header {
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: 1rem !important;
+  font-weight: 600 !important;
 
-  margin-bottom: 10px;
+  margin-bottom: 10px !important;
 }
 
 .searchField {
